--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Timezones-US
 
 {{$NEXT}}
+    - Release on master branch
 
 0.0.4  2024-01-28T18:38:14-06:00
     - Add 3-OS tests
